# Copyright 2020 The Kythe Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
name = "kythe_rust"
version = "0.1.0"
authors = [ "The Kythe Authors" ]
edition = "2018"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33.1"
colored = "2.0.0"
hex = "0.4.3"
quick-error = "1.2.3"
regex = "1.3.9"
rls-analysis = "0.18.1"
rls-data = "0.19"
serde = "1.0.114"
serde_json = "1.0"
sha2 = "0.9.5"
tempdir = "0.3"
zip = "0.5.6"
lazy_static = "1.4.0"
rayon = "1.5.0"

[dev-dependencies]
serial_test = "0.4.0"

[package.metadata.raze]
workspace_path = "//kythe/rust/cargo"
genmode = "Remote"
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]
package_aliases_dir = "."

#
# cargo-raze crate configuration
# NOTE: If the build starts failing after a dependency is updated, ensure
# that the version numbers below match the updated dependencies.
#

[package.metadata.raze.crates.bzip2-sys.'0.1.9+1.0.8']
gen_buildrs = true

[package.metadata.raze.crates.proc-macro2.'1.0.19']
gen_buildrs = true
