# Copyright 2016 The Kythe Authors. All rights reserved.
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#   http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "kythe-indexer"
description = "A plugin for generating knowledge graphs of Rust code"
version = "0.1.0"
authors = ["John Renner <john@jrenner.net>"]
license = "Apache-2.0"
repository = "https://github.com/google/kythe" 
keywords = ["kythe", "index", "plugin"]
readme = "README.md"

[lib]
crate-type = ["dylib"]

[dependencies]
rustc-serialize="^0.3.19"
