# Copyright 2020 The Kythe Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "kythe_rust_extractor"
version = "0.1.0"
authors = ["The Kythe Authors"]
edition = "2018"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "../src/lib.rs"

[dependencies]
protobuf = "=2.8.2"
quick-error = "1.2.3"
zip = "0.5.6"
rls-data = "0.19"
clap = "2.33.1"
anyhow = "1.0"
tempdir = "0.3"
rust-crypto = "0.2.36"

[raze]
workspace_path = "//kythe/rust/extractor/cargo"
genmode = "Remote"
target = "x86_64-unknown-linux-gnu"

# Locked on protobuf 2.8.2 until rules_rust increases their version
# https://github.com/bazelbuild/rules_rust/tree/master/proto/raze/patch
# We need to match rules_rust's version to avoid errors with different
# protobuf crates.
[raze.crates.protobuf.'2.8.2']
patches = ["@io_bazel_rules_rust//proto/raze/patch:protobuf-2.8.2.patch"]
patch_args = ["-p1"]

[raze.crates.lexical-core.'0.6.7']
gen_buildrs = true

[raze.crates.bstr.'0.2.13']
data_attr = 'glob(["**/*.dfa"])'

[raze.crates.bzip2-sys.'0.1.9+1.0.8']
gen_buildrs = true
