# Copyright 2020 The Kythe Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "kythe_rust_indexer"
version = "0.1.0"
authors = ["Wyatt Calandro <wcalandro@google.com>"]
edition = "2018"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "../src/lib.rs"

[dependencies]
positioned-io = "0.2.2"
protobuf = "=2.8.2"
quick-error = "1.2.3"
rc-zip = "0.0.1"

[raze]
workspace_path = "//kythe/rust/indexer/cargo"
genmode = "Remote"
target = "x86_64-unknown-linux-gnu"

# Locked on protobuf 2.8.2 until rules_rust increases their version
# https://github.com/bazelbuild/rules_rust/tree/master/proto/raze/patch
# We need to match rules_rust's version to avoid errors with different
# protobuf crates.
[raze.crates.protobuf.'2.8.2']
patches = ["@io_bazel_rules_rust//proto/raze/patch:protobuf-2.8.2.patch"]
patch_args = ["-p1"]

[raze.crates.codepage-437.'0.1.0']
gen_buildrs = true

[raze.crates.lexical-core.'0.6.7']
additional_flags = [
    "--cfg=has_range_bounds",
    "--cfg=has_slice_index",
    "--cfg=has_full_range_inclusive",
    "--cfg=has_const_index",
    "--cfg=has_i128",
    "--cfg=has_ops_bound",
    "--cfg=has_pointer_methods",
    "--cfg=has_range_inclusive",
    "--cfg=limb_width_64",
]

[raze.crates.bstr.'0.2.13']
data_attr = 'glob(["**/*.dfa"])'
